--- a/app/partials/create-note.html
+++ b/app/partials/create-note.html
@@ -1,18 +1,12 @@
 <div class="row">
-<div id="draggable-area" class="well col-lg-8">
-    <div id="draggable" class="ui-widget-content col-lg-2 dragme">
-        <p>Drag me around</p>
-        <input class="form-control input-lg" type="text" id="inputLarge">
-    </div>
+<div droppable id="droppable-area" class="well col-lg-8 drophere">
+      <p>Drop here</p>
 </div>
 <div class="panel panel-default col-lg-4">
     <div class="panel-heading">Note Options</div>
       <div class="panel-body" ng-repeat="option in options">
+          <p>{{option.text}}</p>
+          <textbox draggable></textbox>
       </div>
     </div>
 </div>
- <script>
-  $(function() {
-    $( "#draggable" ).draggable();
-  });
-  </script>
