adding text boxes

--- a/app/partials/create-note.html
+++ b/app/partials/create-note.html
@@ -1,11 +1,5 @@
 <div class="row">
-<div id="droppable-area" class="well col-lg-8 drophere">
-    <div droppable class="col-lg-2 green bootstrap-grid"></div>
-    <div droppable class="col-lg-2 blue bootstrap-grid"></div>
-    <div droppable class="col-lg-2 green bootstrap-grid"></div>
-    <div droppable class="col-lg-2 blue bootstrap-grid"></div>
-    <div droppable class="col-lg-2 green bootstrap-grid"></div>
-    <div droppable class="col-lg-2 blue bootstrap-grid"></div>
+<div droppable id="droppable-area" class="well col-lg-8 drophere">
 </div>
 <div class="panel panel-default col-lg-4">
     <div class="panel-heading">Note Options</div>
